# dbfx

./: .gitattributes  README.md  build.gradle  settings.gradle
.github/: FUNDING.yml
app/: build.gradle
app/src/main/java/cn/navigational/dbfx/: AbstractFxmlController.java  AppPlatform.java  (+8 more)
app/src/main/resources/: banner.txt  logback.xml
app/src/main/resources/config/: s_db.json  ui_preferences.json
app/src/main/resources/css/: about_style.css  app_style.css  create_con_style.css  edit_con_style.css  export_style.css  home_style.css  splash_style.css
app/src/main/resources/css/controller/: b_expand_pane_style.css  con_info_style.css  log_pane_style.css  progress_dialog_pane_style.css  sql_terminal_style.css  table_view_style.css
app/src/main/resources/css/dialog/: table_setting_dialog_style.css
app/src/main/resources/fxml/: about_view.fxml  create_con_view.fxml  edit_con_view.fxml  export_view.fxml  home_view.fxml  splash_view.fxml
app/src/main/resources/fxml/controller/: b_expand_pane.fxml  con_info_pane.fxml  log_pane.fxml  n_top_bar.fxml  progress_dialog_pane.fxml  sql_terminal.fxml  table_setting_pane.fxml  table_view.fxml  terminal_pane.fxml
app/src/main/resources/fxml/dialog/: table_setting_dialog_pane.fxml
app/src/main/resources/i18n/: dbfx.properties  dbfx_zh_CN.properties  dbfx_zh_CN_bg.properties
gradle/wrapper/: gradle-wrapper.properties
kit/: build.gradle
kit/src/main/resources/config/keyword/: support_key.json
native/linux-gl-menu/: CMakeLists.txt  linux_global_menu_wrapper.c  linux_global_menu_wrapper.h  main.c  test.c  test.h
(+155 files in other folders)
